## NegotiationTableUI.gd
## è°ˆåˆ¤æ¡Œ UI æ§åˆ¶è„šæœ¬
##
## è´Ÿè´£ï¼š
## - è¿æ¥ UI å…ƒç´ ä¸ NegotiationManager
## - æ ¹æ®çŠ¶æ€åˆ‡æ¢æ˜¾ç¤ºä¸åŒçš„ UI åŒºåŸŸ
## - æ›´æ–°å¿ƒç†ä»ªè¡¨ç›˜æ˜¾ç¤º
## - å¤„ç†æŒ‰é’®ç‚¹å‡»äº‹ä»¶
##
## éµå¾ª "Call Down, Signal Up" åŸåˆ™ï¼š
## - ç›‘å¬ Manager çš„ä¿¡å·æ¥æ›´æ–° UI
## - è°ƒç”¨ Manager çš„å…¬å…±æ–¹æ³•æ¥è§¦å‘è¡Œä¸º
extends Control

## ===== èŠ‚ç‚¹å¼•ç”¨ =====

## ç®¡ç†å™¨å¼•ç”¨ï¼ˆé€šè¿‡ @export æ³¨å…¥æˆ–ä»£ç æŸ¥æ‰¾ï¼‰
@export var manager_path: NodePath = ^"Manager"
var manager: Node = null

## UI å…ƒç´ å¼•ç”¨ - é¡¶éƒ¨çŠ¶æ€æ 
@onready var state_label: Label = $TopStatusBar/StateLabel
@onready var round_label: Label = $TopStatusBar/RoundLabel

## åˆ©ç›Šç»Ÿè®¡é¢æ¿ï¼ˆé¡¶éƒ¨çŠ¶æ€æ å†…ï¼‰
@onready var ai_benefit_bar: ProgressBar = $TopStatusBar/BenefitDisplay/AIBenefitBox/AIBar
@onready var ai_benefit_label: Label = $TopStatusBar/BenefitDisplay/AIBenefitBox/AIValue
@onready var player_benefit_bar: ProgressBar = $TopStatusBar/BenefitDisplay/PlayerBenefitBox/PlayerBar
@onready var player_benefit_label: Label = $TopStatusBar/BenefitDisplay/PlayerBenefitBox/PlayerValue

## AI æƒ…ç»ªæ¡ï¼ˆé¡¶éƒ¨çŠ¶æ€æ å†…ï¼Œåœ¨ AI åˆ©ç›Šæ¡æ—ï¼‰
@onready var sentiment_emoji: Label = $TopStatusBar/BenefitDisplay/AISentimentBox/SentimentEmoji
@onready var sentiment_bar: ProgressBar = $TopStatusBar/BenefitDisplay/AISentimentBox/SentimentBar
@onready var sentiment_label: Label = $TopStatusBar/BenefitDisplay/AISentimentBox/SentimentValue

## å¯¹æ‰‹åŒºåŸŸ
@onready var feedback_label: Label = $TopLayer/OpponentHUD/FeedbackBubble/FeedbackLabel

## GAP-L ä»ªè¡¨ç›˜ï¼ˆå·²éšè—ï¼Œä»…ç”¨äºè°ƒè¯•è®¡ç®—ï¼‰
@onready var greed_bar: ProgressBar = $TopLayer/PsychMeters/GreedMeter/Bar
@onready var anchor_bar: ProgressBar = $TopLayer/PsychMeters/AnchorMeter/Bar
@onready var power_bar: ProgressBar = $TopLayer/PsychMeters/PowerMeter/Bar
@onready var patience_bar: ProgressBar = $TopLayer/PsychMeters/PatienceMeter/Bar

## ææ¡ˆåŒºåŸŸ
@onready var tactic_tag: Label = $MiddleLayer/OfferContainer/VBox/TacticTag
@onready var topic_layout: HBoxContainer = $MiddleLayer/OfferContainer/VBox/TopicLayout

## æˆ˜æœ¯é€‰æ‹©å™¨
@onready var tactic_selector: HBoxContainer = $BottomLayer/TacticSelector
@onready var btn_simple: Button = $BottomLayer/TacticSelector/BtnSimple
@onready var btn_substantiation: Button = $BottomLayer/TacticSelector/BtnSubstantiation
@onready var btn_threat: Button = $BottomLayer/TacticSelector/BtnThreat
@onready var btn_relationship: Button = $BottomLayer/TacticSelector/BtnRelationship
@onready var btn_apologize: Button = $BottomLayer/TacticSelector/BtnApologize

## è¡ŒåŠ¨æŒ‰é’®
@onready var action_buttons: HBoxContainer = $BottomLayer/ActionButtons
@onready var submit_btn: Button = $BottomLayer/ActionButtons/SubmitBtn

## ååº”æŒ‰é’®
@onready var reaction_buttons: HBoxContainer = $BottomLayer/ReactionButtons
@onready var btn_accept: Button = $BottomLayer/ReactionButtons/BtnAccept
@onready var btn_reject_soft: Button = $BottomLayer/ReactionButtons/BtnRejectSoft
@onready var btn_reject_hard: Button = $BottomLayer/ReactionButtons/BtnRejectHard
@onready var btn_walk_away: Button = $BottomLayer/ReactionButtons/BtnWalkAway

## æ‰‹ç‰ŒåŒºåŸŸ
@onready var hand_layout: HBoxContainer = $BottomLayer/HandArea/HandLayout


## ===== å†…éƒ¨çŠ¶æ€ =====

## æˆ˜æœ¯ç±»å¼•ç”¨
var TacticClass: GDScript = null

## ååº”ç±»å¼•ç”¨
var ReactionClass: GDScript = null

## å¯æ‹–æ‹½å¡ç‰Œåœºæ™¯
var DraggableCardScene: PackedScene = preload("res://scenes/negotiation/scenes/DraggableCard.tscn")

## å½“å‰é€‰ä¸­çš„æˆ˜æœ¯ç´¢å¼•
var _selected_tactic_index: int = 0

## é¢„è®¾æˆ˜æœ¯åˆ—è¡¨ï¼ˆä¸æŒ‰é’®é¡ºåºå¯¹åº”ï¼‰
var _tactic_presets: Array = []

## æœ€æ–°çš„ AI åææ¡ˆï¼ˆç”¨äº UI æ˜¾ç¤ºï¼‰
var _last_counter_offer: Dictionary = {}

## ä¸Šä¸€æ¬¡åˆ©ç›Šå€¼ï¼ˆç”¨äºè®¡ç®—å·®å€¼ï¼‰
var _last_ai_benefit: float = 0.0
var _last_player_benefit: float = 0.0


## ===== ç”Ÿå‘½å‘¨æœŸ =====

func _ready() -> void:
	# å»¶è¿ŸåŠ è½½ç±»ï¼Œé¿å…å¾ªç¯å¼•ç”¨
	TacticClass = load("res://scenes/negotiation/resources/NegotiationTactic.gd")
	ReactionClass = load("res://scenes/negotiation/resources/NegotiationReaction.gd")
	
	# è·å– Manager
	manager = get_node(manager_path)
	if manager == null:
		push_error("[NegotiationTableUI] Manager æœªæ‰¾åˆ°!")
		return
	
	# é¢„è®¾æˆ˜æœ¯å°†åœ¨è°ˆåˆ¤å¼€å§‹ååˆå§‹åŒ–
	
	# è¿æ¥ Manager ä¿¡å·
	manager.state_changed.connect(_on_state_changed)
	manager.ai_evaluated.connect(_on_ai_evaluated)
	manager.round_ended.connect(_on_round_ended)
	manager.negotiation_ended.connect(_on_negotiation_ended)
	manager.counter_offer_generated.connect(_on_counter_offer_generated)
	# è¿æ¥ AI æƒ…ç»ªå˜åŒ–ä¿¡å·
	manager.ai_sentiment_changed.connect(_on_ai_sentiment_changed)
	
	# è¿æ¥æŒ‰é’®ä¿¡å·
	_connect_buttons()
	
	# åˆå§‹åŒ– UI çŠ¶æ€
	_update_ui_for_state(0) # IDLE
	
	# è‡ªåŠ¨å¼€å§‹è°ˆåˆ¤ï¼ˆå¯é€‰ï¼Œä¹Ÿå¯ä»¥ç”±å¤–éƒ¨è§¦å‘ï¼‰
	await get_tree().create_timer(0.5).timeout
	manager.start_negotiation()
	
	# æ·»åŠ æµ‹è¯•ç”¨çš„åˆå§‹æ‰‹ç‰Œ
	_add_test_hand_cards()
	
	# åˆå§‹åŒ– AI å¡ç‰Œåº“ï¼ˆç”¨äºç”Ÿæˆåææ¡ˆï¼‰
	_init_ai_deck()
	
	# åˆå§‹åŒ–é¢„è®¾æˆ˜æœ¯ï¼ˆåœ¨è°ˆåˆ¤å¼€å§‹åè®¾ç½®ï¼Œé¿å… IDLE çŠ¶æ€è­¦å‘Šï¼‰
	_init_tactic_presets()
	
	# å¯ç”¨æ‹–æ‹½è½¬å‘ (Drag Forwarding)
	# è®© topic_layout (ææ¡ˆåŒº) å’Œ hand_layout (æ‰‹ç‰ŒåŒº) çš„æ‹–æ‹½äº‹ä»¶è½¬å‘ç»™æœ¬è„šæœ¬å¤„ç†
	# æ³¨æ„ï¼šGodot 4.x çš„ set_drag_forwarding å›è°ƒåªæ¥å— (Vector2, Variant) ä¸¤ä¸ªå‚æ•°
	# ä½¿ç”¨ bind() ç»‘å®šç¬¬ä¸‰ä¸ªå‚æ•°ï¼ˆç›®æ ‡æ§ä»¶ï¼‰æ¥åŒºåˆ†æ‹–æ”¾ç›®æ ‡
	topic_layout.set_drag_forwarding(
		Callable(),
		_can_drop_data_topic.bind(topic_layout),
		_drop_data_topic.bind(topic_layout)
	)
	hand_layout.set_drag_forwarding(
		Callable(),
		_can_drop_data_hand.bind(hand_layout),
		_drop_data_hand.bind(hand_layout)
	)
	
	print("[NegotiationTableUI] åˆå§‹åŒ–å®Œæˆ")


## ===== åˆå§‹åŒ–æ–¹æ³• =====

## åˆå§‹åŒ–é¢„è®¾æˆ˜æœ¯
func _init_tactic_presets() -> void:
	# åˆ›å»ºå„ç§é¢„è®¾æˆ˜æœ¯
	_tactic_presets = [
		_create_tactic("tactic_simple", "ç›´æ¥æäº¤", 0, []),
		_create_tactic("tactic_substantiation", "ç†æ€§åˆ†æ", 1, [
			{"target": "weight_anchor", "op": "multiply", "val": 0.8},
			{"target": "weight_power", "op": "multiply", "val": 0.5}
		]),
		_create_tactic("tactic_threat", "å¨èƒæ–½å‹", 7, [
			{"target": "base_batna", "op": "add", "val": - 15.0},
			{"target": "weight_power", "op": "multiply", "val": 2.5}
		]),
		_create_tactic("tactic_relationship", "æ‰“æ„Ÿæƒ…ç‰Œ", 5, [
			{"target": "weight_power", "op": "set", "val": 0.0},
			{"target": "weight_greed", "op": "multiply", "val": 0.9}
		]),
		_create_tactic("tactic_apologize", "é“æ­‰ç¤ºå¼±", 6, [
			{"target": "weight_laziness", "op": "multiply", "val": 0.5}
		]),
	]
	# è®¾ç½®é»˜è®¤æˆ˜æœ¯
	manager.set_tactic(_tactic_presets[0])


## åˆ›å»ºæˆ˜æœ¯èµ„æº
func _create_tactic(id: String, display_name: String, act_type: int, modifiers: Array) -> Resource:
	var tactic: Resource = TacticClass.new()
	tactic.id = id
	tactic.display_name = display_name
	tactic.act_type = act_type
	tactic.modifiers.assign(modifiers)
	return tactic


## è¿æ¥æŒ‰é’®ä¿¡å·
func _connect_buttons() -> void:
	# æˆ˜æœ¯æŒ‰é’®
	btn_simple.pressed.connect(_on_tactic_pressed.bind(0))
	btn_substantiation.pressed.connect(_on_tactic_pressed.bind(1))
	btn_threat.pressed.connect(_on_tactic_pressed.bind(2))
	btn_relationship.pressed.connect(_on_tactic_pressed.bind(3))
	btn_apologize.pressed.connect(_on_tactic_pressed.bind(4))
	
	# æäº¤æŒ‰é’®
	submit_btn.pressed.connect(_on_submit_pressed)
	
	# ååº”æŒ‰é’® - ä½¿ç”¨æ–°çš„ ReactionType æšä¸¾
	# ReactionType: ACCEPT=0, REJECT=1, MODIFY=2, WALK_AWAY=3
	btn_accept.pressed.connect(_on_reaction_pressed.bind(0)) # ACCEPT
	btn_reject_soft.pressed.connect(_on_reaction_pressed.bind(1)) # REJECT
	btn_reject_hard.pressed.connect(_on_reaction_pressed.bind(2)) # MODIFY (ä¿®æ”¹ææ¡ˆ)
	btn_walk_away.pressed.connect(_on_reaction_pressed.bind(3)) # WALK_AWAY


## æ·»åŠ æµ‹è¯•ç”¨æ‰‹ç‰Œ
func _add_test_hand_cards() -> void:
	# åˆ›å»ºå‡ å¼ æµ‹è¯•è®®é¢˜å¡
	var CardClass: GDScript = load("res://scenes/gap_l_mvp/resources/GapLCardData.gd")
	
	var test_cards: Array = [
		{"name": "å¤§è±†é‡‡è´­", "g": 30.0, "opp": 15.0},
		{"name": "å…³ç¨å‡å…", "g": 25.0, "opp": 50.0},
		{"name": "æŠ€æœ¯åˆä½œ", "g": 15.0, "opp": 20.0},
		{"name": "èƒ½æºåè®®", "g": 40.0, "opp": 35.0},
	]
	
	for card_data: Dictionary in test_cards:
		var card: Resource = CardClass.create(card_data["name"], card_data["g"], card_data["opp"])
		_create_hand_card_ui(card)


## åˆå§‹åŒ– AI å¡ç‰Œåº“
## ä¸º AI æä¾›ä¸€ç»„å¯ç”¨äºåææ¡ˆçš„å¡ç‰Œ
func _init_ai_deck() -> void:
	var CardClass: GDScript = load("res://scenes/gap_l_mvp/resources/GapLCardData.gd")
	
	# AI ä¸“å±å¡ç‰Œï¼ˆé«˜ G ä½ Opp çš„å¯¹ AI æœ‰åˆ©å¡ç‰Œï¼‰
	var ai_cards: Array = [
		{"name": "çŸ¥è¯†äº§æƒä¿æŠ¤", "g": 50.0, "opp": 20.0},
		{"name": "å¸‚åœºå‡†å…¥", "g": 45.0, "opp": 25.0},
		{"name": "æŠ€æœ¯è½¬è®©", "g": 35.0, "opp": 15.0},
		{"name": "æŠ•èµ„é™åˆ¶æ”¾å®½", "g": 40.0, "opp": 30.0},
	]
	
	var deck: Array = []
	for card_data: Dictionary in ai_cards:
		var card: Resource = CardClass.create(card_data["name"], card_data["g"], card_data["opp"])
		deck.append(card)
	
	manager.set_ai_deck(deck)
	print("[NegotiationTableUI] AI å¡ç‰Œåº“å·²åˆå§‹åŒ–ï¼Œå…± %d å¼ " % deck.size())


## åˆ›å»ºæ‰‹ç‰Œ UI å…ƒç´ 
func _create_hand_card_ui(card: Resource) -> void:
	var card_ui = DraggableCardScene.instantiate()
	hand_layout.add_child(card_ui)
	card_ui.set_card_data(card)

## ===== æ‹–æ‹½ç³»ç»Ÿå›è°ƒ (Drag & Drop) =====
## æ³¨æ„ï¼šGodot 4.x çš„ set_drag_forwarding å›è°ƒç­¾åä¸º (Vector2, Variant)
## ä½¿ç”¨ bind() ç»‘å®šé¢å¤–å‚æ•°æ¥ä¼ é€’ç›®æ ‡æ§ä»¶ä¿¡æ¯

## ææ¡ˆåŒºï¼šåˆ¤æ–­æ˜¯å¦å¯ä»¥æ”¾ç½®
## @param at_position: æ”¾ç½®ä½ç½®
## @param data: æ‹–æ‹½æ•°æ®
## @param target: bind() ç»‘å®šçš„ç›®æ ‡æ§ä»¶
func _can_drop_data_topic(at_position: Vector2, data: Variant, target: Control) -> bool:
	print("[Drag] _can_drop_data_topic called")
	return _can_drop_to_target(data, target, false) # ææ¡ˆåŒº


## æ‰‹ç‰ŒåŒºï¼šåˆ¤æ–­æ˜¯å¦å¯ä»¥æ”¾ç½®ï¼ˆæ’¤å›å¡ç‰Œï¼‰
## @param at_position: æ”¾ç½®ä½ç½®
## @param data: æ‹–æ‹½æ•°æ®
## @param target: bind() ç»‘å®šçš„ç›®æ ‡æ§ä»¶
func _can_drop_data_hand(at_position: Vector2, data: Variant, target: Control) -> bool:
	print("[Drag] _can_drop_data_hand called")
	return _can_drop_to_target(data, target, true) # æ‰‹ç‰ŒåŒº


## ææ¡ˆåŒºï¼šå¤„ç†æ”¾ç½®æ•°æ®
## @param at_position: æ”¾ç½®ä½ç½®
## @param data: æ‹–æ‹½æ•°æ®
## @param target: bind() ç»‘å®šçš„ç›®æ ‡æ§ä»¶
func _drop_data_topic(at_position: Vector2, data: Variant, target: Control) -> void:
	print("[Drag] _drop_data_topic called")
	_handle_drop(data, false) # æ·»åŠ åˆ°æ¡Œé¢


## æ‰‹ç‰ŒåŒºï¼šå¤„ç†æ”¾ç½®æ•°æ®ï¼ˆæ’¤å›å¡ç‰Œï¼‰
## @param at_position: æ”¾ç½®ä½ç½®
## @param data: æ‹–æ‹½æ•°æ®
## @param target: bind() ç»‘å®šçš„ç›®æ ‡æ§ä»¶
func _drop_data_hand(at_position: Vector2, data: Variant, target: Control) -> void:
	print("[Drag] _drop_data_hand called")
	_handle_drop(data, true) # ä»æ¡Œé¢ç§»é™¤


## é€šç”¨åˆ¤æ–­é€»è¾‘
## @param data: æ‹–æ‹½æ•°æ®
## @param target: ç›®æ ‡æ§ä»¶
## @param is_hand_area: æ˜¯å¦æ˜¯æ‰‹ç‰ŒåŒºï¼ˆç”¨äºåˆ¤æ–­æ’¤å›æ“ä½œï¼‰
func _can_drop_to_target(data: Variant, target: Control, is_hand_area: bool) -> bool:
	# éªŒè¯æ•°æ®æ ¼å¼
	if not data is Dictionary or data.get("type") != "negotiation_card":
		return false
	
	# æ£€æŸ¥çŠ¶æ€ï¼šåªæœ‰ç©å®¶å›åˆå¯ä»¥ç§»åŠ¨å¡ç‰Œ
	if manager.get_current_state() != manager.State.PLAYER_TURN:
		return false
	
	var card_data: Resource = data["card_resource"]
	
	if is_hand_area:
		# æ‰‹ç‰ŒåŒºï¼šåªæ¥å—å·²åœ¨æ¡Œé¢çš„å¡ç‰Œï¼ˆæ’¤å›æ“ä½œï¼‰
		return card_data in manager.table_cards
	else:
		# ææ¡ˆåŒºï¼šåªæ¥å—ä¸åœ¨æ¡Œé¢çš„å¡ç‰Œï¼ˆæ·»åŠ æ“ä½œï¼‰
		return not card_data in manager.table_cards


## é€šç”¨æ”¾ç½®å¤„ç†é€»è¾‘
## @param data: æ‹–æ‹½æ•°æ®
## @param is_remove: æ˜¯å¦æ˜¯ç§»é™¤æ“ä½œ
func _handle_drop(data: Variant, is_remove: bool) -> void:
	var card_data: Resource = data["card_resource"]
	
	# æ‰§è¡Œé€»è¾‘ç§»åŠ¨
	if is_remove:
		manager.remove_card_from_table(card_data)
	else:
		manager.add_card_to_table(card_data)
	
	# åˆ·æ–° UI æ˜¾ç¤º
	_update_table_display()
	_update_hand_display()
	# æ›´æ–°åˆ©ç›Šç»Ÿè®¡
	_update_benefit_display()


## æ›´æ–°æ‰‹ç‰Œæ˜¾ç¤ºçŠ¶æ€
func _update_hand_display() -> void:
	for child in hand_layout.get_children():
		var script = child.get_script()
		if script and script.resource_path == "res://scenes/negotiation/scripts/DraggableCard.gd":
			var card = child.card_data
			# å¦‚æœå¡ç‰Œå·²åœ¨æ¡Œé¢ï¼Œéšè—æ‰‹ç‰ŒåŒºçš„å‰¯æœ¬ï¼›å¦åˆ™æ˜¾ç¤º
			child.visible = not (card in manager.table_cards)


## ===== ä¿¡å·å›è°ƒ =====

## çŠ¶æ€å˜åŒ–å¤„ç†
func _on_state_changed(new_state: int) -> void:
	_update_ui_for_state(new_state)


## AI è¯„ä¼°å®Œæˆå¤„ç†
func _on_ai_evaluated(result: Dictionary) -> void:
	# æ›´æ–°åé¦ˆæ°”æ³¡
	if result["accepted"]:
		feedback_label.text = "æˆäº¤ï¼è¿™ä¸ªæ¡ä»¶æˆ‘æ¥å—ã€‚"
	else:
		feedback_label.text = result["reason"]
	
	# æ›´æ–°å¿ƒç†ä»ªè¡¨ç›˜ï¼ˆåŸºäº breakdown æ•°æ®ï¼‰
	var breakdown: Dictionary = result["breakdown"]
	_update_psych_meters(breakdown)


## AI åææ¡ˆç”Ÿæˆå¤„ç†
## @param counter_offer: åææ¡ˆå­—å…¸ï¼ŒåŒ…å« cards, removed_cards, added_cards, reason ç­‰
func _on_counter_offer_generated(counter_offer: Dictionary) -> void:
	_last_counter_offer = counter_offer
	
	# æ›´æ–°åé¦ˆæ°”æ³¡ï¼Œæ˜¾ç¤ºåææ¡ˆè¯´æ˜
	var message: String = "è®©æˆ‘æä¸ªå»ºè®®...\n"
	
	# æ˜¾ç¤ºç§»é™¤å¡ç‰Œä¿¡æ¯
	var removed: Array = counter_offer.get("removed_cards", [])
	if not removed.is_empty():
		message += "å»ºè®®ç§»é™¤: "
		for i: int in range(removed.size()):
			var item: Dictionary = removed[i]
			var card: Resource = item.get("card")
			if card:
				message += card.card_name
				if i < removed.size() - 1:
					message += ", "
		message += "\n"
	
	# æ˜¾ç¤ºæ·»åŠ å¡ç‰Œä¿¡æ¯
	var added: Array = counter_offer.get("added_cards", [])
	if not added.is_empty():
		message += "å»ºè®®æ·»åŠ : "
		for i: int in range(added.size()):
			var item: Dictionary = added[i]
			var card: Resource = item.get("card")
			if card:
				message += card.card_name
				if i < added.size() - 1:
					message += ", "
		message += "\n"
	
	# å¦‚æœæ²¡æœ‰å»ºè®®å˜æ›´
	if removed.is_empty() and added.is_empty():
		message = counter_offer.get("reason", "AI æ­£åœ¨æ€è€ƒ...")
	
	feedback_label.text = message
	
	# æ›´æ–°ææ¡ˆåŒºæ˜¾ç¤ºåææ¡ˆå†…å®¹
	_update_counter_offer_display(counter_offer)
	
	# é¢„è§ˆåææ¡ˆçš„åˆ©ç›Šå˜åŒ–
	_preview_counter_offer_benefit(counter_offer)


## å›åˆç»“æŸå¤„ç†
func _on_round_ended(round_number: int) -> void:
	round_label.text = "å›åˆ %d/10" % (round_number + 1)
	
	# æ›´æ–°è€å¿ƒæ¡
	var patience_value: float = 10.0 - float(round_number)
	patience_bar.value = maxf(patience_value, 0.0)


## è°ˆåˆ¤ç»“æŸå¤„ç†
func _on_negotiation_ended(outcome: int, score: float) -> void:
	var outcome_names: Array = ["è¿›è¡Œä¸­", "èƒœåˆ©", "å¤±è´¥", "å¹³å±€"]
	feedback_label.text = "è°ˆåˆ¤ç»“æŸ: %s\næœ€ç»ˆåˆ†æ•°: %.1f" % [outcome_names[outcome], score]
	
	# ç¦ç”¨æ‰€æœ‰äº¤äº’
	submit_btn.disabled = true
	for child: Node in hand_layout.get_children():
		if child is Button:
			child.disabled = true


## æˆ˜æœ¯æŒ‰é’®ç‚¹å‡»
func _on_tactic_pressed(index: int) -> void:
	_selected_tactic_index = index
	var tactic: Resource = _tactic_presets[index]
	manager.set_tactic(tactic)
	
	# æ›´æ–°æˆ˜æœ¯æ ‡ç­¾
	tactic_tag.text = "é™„åŠ å§¿æ€: [%s]" % tactic.display_name
	
	# æ›´æ–°æŒ‰é’®è§†è§‰çŠ¶æ€
	_update_tactic_button_states()


## æäº¤æŒ‰é’®ç‚¹å‡»
func _on_submit_pressed() -> void:
	if manager.table_cards.is_empty():
		feedback_label.text = "è¯·å…ˆé€‰æ‹©è‡³å°‘ä¸€å¼ è®®é¢˜å¡ï¼"
		return
	
	feedback_label.text = "è®©æˆ‘è€ƒè™‘ä¸€ä¸‹..."
	manager.submit_proposal()


## ååº”æŒ‰é’®ç‚¹å‡»
## @param reaction_type: ReactionType æšä¸¾å€¼ (ACCEPT=0, REJECT=1, MODIFY=2, WALK_AWAY=3)
func _on_reaction_pressed(reaction_type: int) -> void:
	# ç›´æ¥è°ƒç”¨ Manager çš„æ–°æ¥å£
	manager.submit_reaction(reaction_type)


## æ‰‹ç‰Œç‚¹å‡»
func _on_hand_card_pressed(card: Resource) -> void:
	# æ£€æŸ¥å¡ç‰Œæ˜¯å¦å·²åœ¨æ¡Œé¢ä¸Š
	# else:
	#	# æ·»åŠ åˆ°æ¡Œé¢
	#	manager.add_card_to_table(card)
	#	_update_table_display()
	pass # ä½¿ç”¨æ‹–æ‹½æ›¿ä»£ç‚¹å‡»


## ===== UI æ›´æ–°æ–¹æ³• =====

## æ ¹æ®çŠ¶æ€æ›´æ–° UI
## æ–°çŠ¶æ€æšä¸¾: IDLE=0, PLAYER_TURN=1, AI_EVALUATE=2, AI_TURN=3, PLAYER_EVALUATE=4, PLAYER_REACTION=5, GAME_END=6
func _update_ui_for_state(state: int) -> void:
	var state_names: Array = ["ç©ºé—²", "ç©å®¶å›åˆ", "AIè¯„ä¼°ä¸­", "AIå›åˆ", "è¯„ä¼°AIææ¡ˆ", "ç­‰å¾…ååº”", "æ¸¸æˆç»“æŸ"]
	state_label.text = state_names[state]
	
	match state:
		0: # IDLE
			action_buttons.visible = false
			reaction_buttons.visible = false
			tactic_selector.visible = false
		1: # PLAYER_TURN
			action_buttons.visible = true
			reaction_buttons.visible = false
			tactic_selector.visible = true
			submit_btn.disabled = false
			# å›åˆ°ç©å®¶å›åˆæ—¶ï¼Œæ¢å¤æ­£å¸¸æ¡Œé¢æ˜¾ç¤º
			_update_table_display()
			_update_hand_display()
		2: # AI_EVALUATE
			action_buttons.visible = true
			submit_btn.disabled = true
			tactic_selector.visible = false
			feedback_label.text = "AI æ­£åœ¨è¯„ä¼°..."
		3: # AI_TURN
			action_buttons.visible = false
			reaction_buttons.visible = false
			tactic_selector.visible = false
			feedback_label.text = "AI æ­£åœ¨è°ƒæ•´ææ¡ˆ..."
		4: # PLAYER_EVALUATE
			action_buttons.visible = false
			reaction_buttons.visible = false
			tactic_selector.visible = false
		5: # PLAYER_REACTION
			action_buttons.visible = false
			reaction_buttons.visible = true
			tactic_selector.visible = false
			# æ›´æ–°æŒ‰é’®æ–‡å­—ä»¥åæ˜ æ–°çš„åŠŸèƒ½
			# btn_reject_hard.text = "ä¿®æ”¹ææ¡ˆ"
		6: # GAME_END
			action_buttons.visible = false
			reaction_buttons.visible = false
			tactic_selector.visible = false


## æ›´æ–°æˆ˜æœ¯æŒ‰é’®çŠ¶æ€
## ä½¿ç”¨è§†è§‰é«˜äº®è€Œéç¦ç”¨ï¼Œè®©ç©å®¶å¯ä»¥éšæ—¶åˆ‡æ¢æˆ˜æœ¯
func _update_tactic_button_states() -> void:
	var buttons: Array = [btn_simple, btn_substantiation, btn_threat, btn_relationship, btn_apologize]
	
	for i: int in range(buttons.size()):
		var btn: Button = buttons[i]
		if i == _selected_tactic_index:
			# é€‰ä¸­çŠ¶æ€ï¼šé«˜äº®è¾¹æ¡†
			var style: StyleBoxFlat = StyleBoxFlat.new()
			style.bg_color = Color(0.2, 0.4, 0.6, 0.8)
			style.border_width_bottom = 3
			style.border_width_left = 3
			style.border_width_right = 3
			style.border_width_top = 3
			style.border_color = Color(0.4, 0.7, 1.0)
			style.corner_radius_top_left = 4
			style.corner_radius_top_right = 4
			style.corner_radius_bottom_left = 4
			style.corner_radius_bottom_right = 4
			btn.add_theme_stylebox_override("normal", style)
			btn.add_theme_stylebox_override("hover", style)
		else:
			# æœªé€‰ä¸­çŠ¶æ€ï¼šç§»é™¤è‡ªå®šä¹‰æ ·å¼
			btn.remove_theme_stylebox_override("normal")
			btn.remove_theme_stylebox_override("hover")


## æ›´æ–°æ¡Œé¢æ˜¾ç¤º
func _update_table_display() -> void:
	# æ¸…é™¤ç°æœ‰å ä½ç¬¦å†…å®¹
	for child: Node in topic_layout.get_children():
		child.queue_free()
	
	# ä¸ºæ¯å¼ æ¡Œé¢å¡ç‰Œåˆ›å»º UI
	for card: Resource in manager.table_cards:
		var card_ui = DraggableCardScene.instantiate()
		topic_layout.add_child(card_ui)
		card_ui.set_card_data(card)
	
	# å¦‚æœæ¡Œé¢ä¸ºç©ºï¼Œæ˜¾ç¤ºæç¤º
	if manager.table_cards.is_empty():
		var hint_label: Label = Label.new()
		hint_label.text = "ç‚¹å‡»ä¸‹æ–¹æ‰‹ç‰Œæ·»åŠ è®®é¢˜"
		hint_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		hint_label.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
		topic_layout.add_child(hint_label)


## æ›´æ–°åææ¡ˆæ˜¾ç¤º
## ç”¨ä¸åŒé¢œè‰²æ ‡è®° AI å»ºè®®ç§»é™¤å’Œæ·»åŠ çš„å¡ç‰Œ
## @param counter_offer: åææ¡ˆå­—å…¸
func _update_counter_offer_display(counter_offer: Dictionary) -> void:
	# æ¸…é™¤ç°æœ‰å†…å®¹
	for child: Node in topic_layout.get_children():
		child.queue_free()
	
	# è·å–å½“å‰æ¡Œé¢å¡ç‰Œå’Œåææ¡ˆæ•°æ®
	var removed_cards: Array = []
	var added_cards: Array = []
	
	for item: Dictionary in counter_offer.get("removed_cards", []):
		var card: Resource = item.get("card")
		if card:
			removed_cards.append(card)
	
	for item: Dictionary in counter_offer.get("added_cards", []):
		var card: Resource = item.get("card")
		if card:
			added_cards.append(card)
	
	# æ˜¾ç¤ºå½“å‰æ¡Œé¢å¡ç‰Œï¼ˆæ ‡è®°è¢«å»ºè®®ç§»é™¤çš„ï¼‰
	for card: Resource in manager.table_cards:
		var card_ui = DraggableCardScene.instantiate()
		topic_layout.add_child(card_ui)
		card_ui.set_card_data(card)
		
		# æ£€æŸ¥æ˜¯å¦è¢«å»ºè®®ç§»é™¤ï¼ˆç”¨çº¢è‰²è¾¹æ¡†æ ‡è®°ï¼‰
		var is_removed: bool = false
		for removed_card: Resource in removed_cards:
			if removed_card.card_name == card.card_name:
				is_removed = true
				break
		
		if is_removed:
			_apply_card_style(card_ui, Color(0.8, 0.2, 0.2), "å»ºè®®ç§»é™¤")
	
	# æ˜¾ç¤ºå»ºè®®æ·»åŠ çš„å¡ç‰Œï¼ˆç”¨ç»¿è‰²è¾¹æ¡†æ ‡è®°ï¼‰
	for card: Resource in added_cards:
		var card_ui = DraggableCardScene.instantiate()
		topic_layout.add_child(card_ui)
		card_ui.set_card_data(card)
		_apply_card_style(card_ui, Color(0.2, 0.8, 0.2), "å»ºè®®æ·»åŠ ")
	
	# å¦‚æœæ²¡æœ‰ä»»ä½•å¡ç‰Œæ˜¾ç¤ºï¼Œæ·»åŠ æç¤º
	if topic_layout.get_child_count() == 0:
		var hint_label: Label = Label.new()
		hint_label.text = "ç­‰å¾… AI å“åº”..."
		hint_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		topic_layout.add_child(hint_label)


## åº”ç”¨å¡ç‰Œæ ·å¼ï¼ˆè¾¹æ¡†é¢œè‰² + æ‚¬æµ®æç¤ºï¼‰
## @param card_ui: DraggableCard å®ä¾‹
## @param border_color: è¾¹æ¡†é¢œè‰²
## @param tooltip: æ‚¬æµ®æç¤ºæ–‡å­—
func _apply_card_style(card_ui: Control, border_color: Color, tooltip: String) -> void:
	var style: StyleBoxFlat = StyleBoxFlat.new()
	style.bg_color = Color(0.2, 0.22, 0.25)
	style.border_width_bottom = 3
	style.border_width_left = 3
	style.border_width_right = 3
	style.border_width_top = 3
	style.border_color = border_color
	style.corner_radius_top_left = 6
	style.corner_radius_top_right = 6
	style.corner_radius_bottom_left = 6
	style.corner_radius_bottom_right = 6
	card_ui.add_theme_stylebox_override("panel", style)
	card_ui.tooltip_text = tooltip


## æ›´æ–°å¿ƒç†ä»ªè¡¨ç›˜ï¼ˆè°ƒè¯•ç”¨ï¼ŒUI å·²éšè—ï¼‰
func _update_psych_meters(breakdown: Dictionary) -> void:
	# è¾“å‡ºè°ƒè¯•æ—¥å¿—
	print("[DEBUG GAP-L] G_score=%.2f, A_gap=%.2f, P_score=%.2f" % [
		breakdown.get("G_score", 0.0),
		breakdown.get("gap_from_anchor", 0.0),
		breakdown.get("P_score", 0.0)
	])
	
	# G: è´ªå©ªåº¦ - åŸºäº G_score ç›¸å¯¹äºèŒƒå›´çš„ç™¾åˆ†æ¯”
	var g_normalized: float = clampf(breakdown["G_score"] / 100.0, 0.0, 1.0) * 100.0
	greed_bar.value = g_normalized
	
	# A: é”šå®šå€¼ - åŸºäºä¸é”šç‚¹çš„å·®è·
	var gap: float = breakdown.get("gap_from_anchor", 0.0)
	var a_normalized: float = clampf((gap + 50.0) / 100.0, 0.0, 1.0) * 100.0
	anchor_bar.value = a_normalized
	
	# P: æƒåŠ›æ¬² - åŸºäº P_score
	var p_normalized: float = clampf((breakdown["P_score"] + 50.0) / 100.0, 0.0, 1.0) * 100.0
	power_bar.value = p_normalized


## æ›´æ–°åˆ©ç›Šç»Ÿè®¡æ˜¾ç¤ºï¼ˆåŒä¾§è¿›åº¦æ¡ï¼‰
## è®¡ç®—å½“å‰æ¡Œé¢å¡ç‰Œçš„åŒæ–¹æ”¶ç›Šæ€»å’Œï¼Œå¹¶æ˜¾ç¤ºä¸ä¸Šæ¬¡çš„å·®å€¼
func _update_benefit_display() -> void:
	# è®¡ç®—å½“å‰æ”¶ç›Š
	var ai_total: float = 0.0
	var player_total: float = 0.0
	
	for card: Resource in manager.table_cards:
		ai_total += card.g_value
		player_total += card.opp_value
	
	# è®¡ç®—å·®å€¼
	var ai_delta: float = ai_total - _last_ai_benefit
	var player_delta: float = player_total - _last_player_benefit
	
	# æ›´æ–°è¿›åº¦æ¡
	ai_benefit_bar.value = ai_total
	player_benefit_bar.value = player_total
	
	# æ›´æ–°æ ‡ç­¾ï¼ˆå¸¦å·®å€¼æ˜¾ç¤ºï¼‰
	if abs(ai_delta) > 0.01:
		var sign_str: String = "+" if ai_delta > 0 else ""
		ai_benefit_label.text = "%.0f (%s%.0f)" % [ai_total, sign_str, ai_delta]
		# è®¾ç½®é¢œè‰²ï¼šå¢åŠ ä¸ºç»¿è‰²ï¼Œå‡å°‘ä¸ºçº¢è‰²
		ai_benefit_label.add_theme_color_override("font_color", Color.GREEN if ai_delta > 0 else Color.RED)
	else:
		ai_benefit_label.text = "%.0f" % ai_total
		ai_benefit_label.remove_theme_color_override("font_color")
	
	if abs(player_delta) > 0.01:
		var sign_str: String = "+" if player_delta > 0 else ""
		player_benefit_label.text = "%.0f (%s%.0f)" % [player_total, sign_str, player_delta]
		player_benefit_label.add_theme_color_override("font_color", Color.GREEN if player_delta > 0 else Color.RED)
	else:
		player_benefit_label.text = "%.0f" % player_total
		player_benefit_label.remove_theme_color_override("font_color")
	
	# ä¿å­˜å½“å‰å€¼ä½œä¸ºä¸‹æ¬¡æ¯”è¾ƒåŸºå‡†
	_last_ai_benefit = ai_total
	_last_player_benefit = player_total
	
	print("[Benefit] AI: %.0f, ç©å®¶: %.0f" % [ai_total, player_total])


## é¢„è§ˆåææ¡ˆçš„åˆ©ç›Šå˜åŒ–ï¼ˆä¸æ›´æ–°åŸºå‡†å€¼ï¼‰
## @param counter_offer: AI åææ¡ˆå­—å…¸
func _preview_counter_offer_benefit(counter_offer: Dictionary) -> void:
	# ä»å½“å‰æ¡Œé¢å¼€å§‹è®¡ç®—
	var ai_total: float = 0.0
	var player_total: float = 0.0
	
	for card: Resource in manager.table_cards:
		ai_total += card.g_value
		player_total += card.opp_value
	
	# å‡å»è¢«ç§»é™¤çš„å¡ç‰Œ
	for item: Dictionary in counter_offer.get("removed_cards", []):
		var card: Resource = item.get("card")
		if card:
			ai_total -= card.g_value
			player_total -= card.opp_value
	
	# åŠ ä¸Šè¢«æ·»åŠ çš„å¡ç‰Œ
	for item: Dictionary in counter_offer.get("added_cards", []):
		var card: Resource = item.get("card")
		if card:
			ai_total += card.g_value
			player_total += card.opp_value
	
	# è®¡ç®—ä¸å½“å‰çŠ¶æ€çš„å·®å€¼
	var ai_delta: float = ai_total - _last_ai_benefit
	var player_delta: float = player_total - _last_player_benefit
	
	# æ›´æ–°è¿›åº¦æ¡
	ai_benefit_bar.value = ai_total
	player_benefit_bar.value = player_total
	
	# æ›´æ–°æ ‡ç­¾ï¼ˆæ˜¾ç¤ºé¢„æœŸå˜åŒ–ï¼‰
	if abs(ai_delta) > 0.01:
		var sign_str: String = "+" if ai_delta > 0 else ""
		ai_benefit_label.text = "%.0f (%s%.0f)" % [ai_total, sign_str, ai_delta]
		ai_benefit_label.add_theme_color_override("font_color", Color.GREEN if ai_delta > 0 else Color.RED)
	else:
		ai_benefit_label.text = "%.0f" % ai_total
		ai_benefit_label.remove_theme_color_override("font_color")
	
	if abs(player_delta) > 0.01:
		var sign_str: String = "+" if player_delta > 0 else ""
		player_benefit_label.text = "%.0f (%s%.0f)" % [player_total, sign_str, player_delta]
		player_benefit_label.add_theme_color_override("font_color", Color.GREEN if player_delta > 0 else Color.RED)
	else:
		player_benefit_label.text = "%.0f" % player_total
		player_benefit_label.remove_theme_color_override("font_color")
	
	print("[Preview] AI: %.0f (%+.0f), ç©å®¶: %.0f (%+.0f)" % [ai_total, ai_delta, player_total, player_delta])


## ===== æƒ…ç»ªç³»ç»Ÿ UI æ›´æ–° =====

## AI æƒ…ç»ªå˜åŒ–å›è°ƒ
## @param new_sentiment: æ–°çš„æƒ…ç»ªå€¼ (-1.0 ~ 1.0)
## @param reason: å˜åŒ–åŸå› æè¿°
func _on_ai_sentiment_changed(new_sentiment: float, reason: String) -> void:
	_update_sentiment_bar(new_sentiment)
	print("[Sentiment UI] æƒ…ç»ª: %.2f | %s" % [new_sentiment, reason])


## æ›´æ–°æƒ…ç»ªæ¡æ˜¾ç¤º
## @param sentiment: æƒ…ç»ªå€¼ (-1.0 ~ 1.0)
func _update_sentiment_bar(sentiment: float) -> void:
	# æ›´æ–°è¿›åº¦æ¡å€¼ï¼ˆè½¬æ¢ä¸ºç™¾åˆ†æ¯” -100 ~ +100ï¼‰
	sentiment_bar.value = sentiment * 100.0
	
	# æ›´æ–°ç™¾åˆ†æ¯”æ ‡ç­¾
	var percent: int = int(sentiment * 100.0)
	sentiment_label.text = "%+d%%" % percent
	
	# æ›´æ–°è¡¨æƒ…ç¬¦å·
	if sentiment <= -0.6:
		sentiment_emoji.text = "ğŸ˜¡" # éå¸¸æ„¤æ€’
	elif sentiment <= -0.2:
		sentiment_emoji.text = "ğŸ˜ " # ä¸æ»¡
	elif sentiment < 0.2:
		sentiment_emoji.text = "ğŸ˜" # ä¸­ç«‹
	elif sentiment < 0.6:
		sentiment_emoji.text = "ğŸ™‚" # å‹å–„
	else:
		sentiment_emoji.text = "ğŸ˜Š" # éå¸¸æ„‰æ‚¦
	
	# è®¡ç®—é¢œè‰²æ¸å˜
	# æ„¤æ€’ï¼ˆçº¢ #E85454ï¼‰-> ä¸­ç«‹ï¼ˆç° #888888ï¼‰-> æ„‰æ‚¦ï¼ˆç»¿ #54E888ï¼‰
	var bar_color: Color
	if sentiment < 0:
		# æ„¤æ€’åŒºé—´ï¼šçº¢è‰²åˆ°ç°è‰²
		var t: float = (sentiment + 1.0) / 1.0 # -1.0~0.0 -> 0~1
		bar_color = Color(0.91, 0.33, 0.33).lerp(Color(0.53, 0.53, 0.53), t)
	else:
		# æ„‰æ‚¦åŒºé—´ï¼šç°è‰²åˆ°ç»¿è‰²
		var t: float = sentiment # 0.0~1.0 -> 0~1
		bar_color = Color(0.53, 0.53, 0.53).lerp(Color(0.33, 0.91, 0.53), t)
	
	# åº”ç”¨è¿›åº¦æ¡å¡«å……é¢œè‰²
	var style: StyleBoxFlat = StyleBoxFlat.new()
	style.bg_color = bar_color
	style.corner_radius_top_left = 2
	style.corner_radius_top_right = 2
	style.corner_radius_bottom_left = 2
	style.corner_radius_bottom_right = 2
	sentiment_bar.add_theme_stylebox_override("fill", style)
	
	# æ ‡ç­¾é¢œè‰²ä¹Ÿè·Ÿéšæƒ…ç»ª
	sentiment_label.add_theme_color_override("font_color", bar_color)
